<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Entomologist</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="hours">hours</string>
    <string name="updateEvery">Update every</string>
    <string name="onlyOverWifi">Only connect over WiFi</string>
    <string name="save">Save</string>
    <string name="reported_by">Reported By</string>
    <string name="assigned_to">Assigned To</string>
    <string name="component">Component:</string>
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="type">Type:</string>
    <string name="priority">Priority:</string>
    <string name="version">Version:</string>
    <string name="milestone">Milestone:</string>
    <string name="type_prompt">Bug Type</string>
    <string name="priority_prompt">Priority</string>
    <string name="component_prompt">Component</string>
    <string name="version_prompt">Version</string>
    <string name="milestone_prompt">Milestone</string>
    <string name="menu_upload">Upload Changes</string>
    <string name="menu_new_comment">New Comment</string>
    <string name="app_title">Entomologist Mobile/Trac</string>
    <string name="summary">Summary</string>
</resources>
