<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent"
 			android:id="@+id/summaryScrollView"
 			android:layout_width="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_height="fill_parent" android:id="@+id/summaryTabView" android:layout_width="fill_parent">
<TextView  android:layout_width="wrap_content"
		   android:id="@+id/textView10"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" 
		   android:textStyle="bold" 
		   android:background="@drawable/detail_header"
		   android:text="@string/status" android:layout_marginTop="10dp"/>
		   
<LinearLayout  android:onClick="statusClick"
		   android:clickable="true"
		android:id="@+id/statusLayout"
				android:background="@drawable/detail_value"
			   android:orientation="horizontal"
			   android:layout_width="fill_parent"
			   android:layout_height="wrap_content">
<TextView  android:onClick="statusClick"
		   android:clickable="true"
		   android:text="Open"
		   android:layout_width="wrap_content"
		   android:layout_marginRight="10dp"
		   android:id="@+id/statusId"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" />
<TextView  
		   android:clickable="true"
		   android:text="NONE"
		   android:layout_width="wrap_content"
		   android:id="@+id/resolutionId"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" />
</LinearLayout>
		   
<TextView  android:layout_width="wrap_content"
		   android:id="@+id/textView1"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" 
		   android:textStyle="bold" 
		   android:background="@drawable/detail_header"
		   android:text="@string/reported_by" android:layout_marginTop="10dp"/>
<TextView  android:onClick="reportedClick"
		   android:background="@drawable/detail_value"
		   android:clickable="true"
		   android:text="Reporter"
		   android:layout_width="fill_parent"
		   android:id="@+id/reportedById"
		   android:layout_height="wrap_content"
		   android:textSize="20dp"></TextView>
<TextView  android:layout_width="wrap_content"
		   android:id="@+id/textView2"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" 
		   android:textStyle="bold" 
		   android:background="@drawable/detail_header"
		   android:text="@string/assigned_to" android:layout_marginTop="10dp"/>
<TextView  android:onClick="assignedToClick"
		   android:background="@drawable/detail_value"
		   android:clickable="true"
		   android:text="Reporter"
		   android:layout_width="fill_parent"
		   android:id="@+id/assignedToEdit"
		   android:layout_height="wrap_content"
		   android:textSize="20dp"></TextView>	  
<TextView  android:layout_width="wrap_content"
		   android:id="@+id/textView3"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" 
		   android:textStyle="bold" 
		   android:background="@drawable/detail_header"
		   android:text="@string/summary" android:layout_marginTop="10dp"/>
<TextView  android:onClick="summaryClick"
		   android:background="@drawable/detail_value"
		   android:clickable="true"
		   android:text="Summary"
		   android:layout_width="fill_parent"
		   android:id="@+id/summaryId"
		   android:layout_height="wrap_content"
		   android:textSize="20dp"></TextView>	 
		   
		   
<TextView  android:layout_width="wrap_content"
		   android:id="@+id/textView4"
		   android:layout_height="wrap_content"
		   android:textSize="20dp" 
		   android:textStyle="bold" 
		   android:background="@drawable/detail_header"
		   android:text="Description" android:layout_marginTop="10dp"/>
<FrameLayout android:background="@drawable/detail_value" android:id="@+id/frameLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp">
<TextView  android:fadingEdge="vertical" 
			android:layout_height="wrap_content"
			android:text="Description"
			android:id="@+id/descriptionId"
			android:layout_width="fill_parent"
			android:textSize="20dp"></TextView>
</FrameLayout>
 
</LinearLayout>    
</ScrollView>  
